# 2026_C_AV_PLUME

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
include/plume/: atomic.h  const.h  context.h  disk.h  driver.h  header.h  status.h  writer.h
include/plume/cli/: command.h  entrypoint.h  reader.h
include/plume/drivers/: inmemory.h  unix.h
src/plume/: atomic.c  context.c  driver.c  header.c  status.c  writer.c
src/plume/cli/: cat.c  clear.c  command.c  entrypoint.c  ls.c  main.c  reader.c
src/plume/drivers/: inmemory.c  unix.c
tests/: CMakeLists.txt  clear_disk_tests.cpp  drivers_tests.cpp  header_tests.cpp  init_tests.cpp  run_tests.sh  writer_tests.cpp
tests/drivers/: CMakeLists.txt  inmemory_driver_tests.cpp  unix_driver_tests.cpp
tests/drivers/images/: create_disk.py  create_images.sh  create_lorem.py
tests/drivers/images/many_files/: 0  2
tests/drivers/images/single_file/: 0
